--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "eslint-config",
+  "name": "eslint-react-config",
   "version": "0.0.1",
   "description": "ESLint config for react apps",
   "main": "index.js",
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/Faradey27/eslint-config"
+    "url": "https://github.com/Faradey27/eslint-react-config"
   },
   "keywords": [
     "eslint",
@@ -27,9 +27,9 @@
   ],
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/Faradey27/eslint-config/issues"
+    "url": "https://github.com/Faradey27/eslint-react-config/issues"
   },
-  "homepage": "https://github.com/Faradey27/eslint-config",
+  "homepage": "https://github.com/Faradey27/eslint-react-config",
   "devDependencies": {
     "babel-tape-runner": "^1.3.1",
     "eslint": "^2.9.0",
