--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-config-hardcore-react",
-  "version": "0.2.6",
+  "version": "0.2.7",
   "description": "ESLint config for react apps",
   "main": "index.js",
   "scripts": {
@@ -31,12 +31,12 @@
   },
   "homepage": "https://github.com/Faradey27/eslint-config-hardcore-react",
   "devDependencies": {
-    "babel-tape-runner": "^1.3.1",
-    "eslint": "^3.4.0",
-    "eslint-find-rules": "^1.8.0",
-    "eslint-plugin-import": "^1.14.0",
+    "babel-tape-runner": "^2.0.1",
+    "eslint": "^4.3.0",
+    "eslint-find-rules": "^3.1.1",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-react": "^7.1.0",
     "tape": "^4.5.1"
   },
-  "peerDependencies": {
-  }
+  "peerDependencies": {}
 }
